--- a/hw6.tex
+++ b/hw6.tex
@@ -241,11 +241,11 @@ Suppose we wish to construct a directed graphical model for 3 features $X$, $Y$,
     \end{soln}
 	\item Which undirected edges will be selected by the Chow-Liu algorithm as the maximum spanning tree? (5 pts)
 	\begin{soln}
-        Solution goes here.
+        The undirected edges between $(Z, Y)$ and the between $(X, Y)$ will be the ones slecedted as the maximum spanning tree.
     \end{soln}
 	\item Root your tree at node $X$, and assign directions to the selected edges. (10 pts)
 	\begin{soln}
-        \\Solution goes here.
+        \\Starting at node X, an edge can go from vertex $X$ into vertex $Y$, and a second edge from vertex $Y$ to vertex $Z$.
     \end{soln}
 \end{enumerate}
 
