Add jupyter notebook

--- a/hw6.tex
+++ b/hw6.tex
@@ -245,7 +245,7 @@ Suppose we wish to construct a directed graphical model for 3 features $X$, $Y$,
     \end{soln}
 	\item Root your tree at node $X$, and assign directions to the selected edges. (10 pts)
 	\begin{soln}
-        \\Starting at node X, an edge can go from vertex $X$ into vertex $Y$, and a second edge from vertex $Y$ to vertex $Z$.
+        \\Starting at node X, an edge can go from vertex $X$ into vertex $Y$, and a second edge from vertex $Y$ intwo vertex $Z$.
     \end{soln}
 \end{enumerate}
 
