--- a/q3.ipynb
+++ b/q3.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/arnav/miniconda3/envs/pytorch/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import torch\n",
@@ -13,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mps\n"
+      "cuda\n"
      ]
     }
    ],
@@ -42,8 +51,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "### Linear SVM"
+    "### Logistic Regression"
    ]
   },
   {
@@ -52,9 +73,85 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class LinearSVM:\n",
+    "class LinearLogisticRegression:\n",
     "    def __init__(self):\n",
-    "        return"
+    "        self.layers = torch.nn.Sequential(\n",
+    "            torch.nn.Linear(4, 1, bias=True),\n",
+    "            torch.nn.Sigmoid()\n",
+    "        )\n",
+    "        return\n",
+    "    def forward(self, x):\n",
+    "        x = x.view(-1, 4)\n",
+    "        return self.layer(x)\n",
+    "\n",
+    "criterion = torch.nn.BCELoss(reduction='mean')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q 3.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create Dataset\n",
+    "mu = torch.tensor([2.5, 0])\n",
+    "a  = []\n",
+    "b = []\n",
+    "for _ in range(750):\n",
+    "    a.append(torch.normal(mu, torch.eye(2)).view(2,2))\n",
+    "    b.append(torch.normal(-mu, torch.eye(2)).view(2,2))\n",
+    "\n",
+    "postive_data_points = torch.stack(a).view(750, 2, 2)\n",
+    "negative_data_points = torch.stack(b).view(750, 2, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_set = torch.cat((postive_data_points, negative_data_points))\n",
+    "labels = torch.cat((torch.ones(750, 1), torch.zeros(750, 1)))\n",
+    "shuffle_index = torch.randperm(data_set.shape[0])\n",
+    "data_set = data_set[shuffle_index]\n",
+    "labels = labels[shuffle_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "permuted_indices = torch.randperm(data_set.shape[0])\n",
+    "training_data = data_set[permuted_indices[:1000]]\n",
+    "training_labels = labels[permuted_indices[:1000]]\n",
+    "validation_data = data_set[permuted_indices[1000:1250]]\n",
+    "validation_labels = labels[permuted_indices[1000:1250]]\n",
+    "test_data = data_set[permuted_indices[1250:1500]]\n",
+    "test_labels = labels[permuted_indices[1250:1500]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_logistic_regression(X_train, Y_train):\n",
+    "    model = LinearLogisticRegression()\n",
+    "    threshold = 1e-5\n",
+    "    loss = 1.\n",
+    "    while loss >= threshold:\n",
+    "        y_hat = model()"
    ]
   }
  ],
@@ -79,7 +176,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "21c392d159e9285ce7be3e3b2bb55dac06325544da9e76e5043f9c99e90d68b1"
+    "hash": "ff5afd5da137a8f0d0d9dd9997059d4bdae58ec77cc5a62e66d9149c0486d48b"
    }
   }
  },
