--- a/hw6.tex
+++ b/hw6.tex
@@ -189,7 +189,24 @@ f(\mathbf z)=\sum_{i=1}^na_iy_i\kappa(\mathbf z_i,z) +b\;.
 \]
 Recall that the label prediction is $\mathrm{sgn}(f(\mathbf z))$. Prove that there exist $a_1, \ldots, a_n, b$ such that $f$ correctly separates
 the training set. In other words, $\kappa$ induces a feature space rich enough such that in it, any training set can be linearly separated.
+\begin{soln}
+    \\Let $\mathbf{z_k}$ be an arbitrary point in our training set. In order for our predictor to correctly predict the label of this arbitrary point, it must match the sign of the chosen training point, i.e.
+    \[ \mathrm{sgn}(f(\mathbf {z_k})) = \mathrm{sgn}(y_k)\]
+    \\ where, 
+    \[ f(\mathbf z)=\sum_{i=1}^na_iy_i\kappa(\mathbf z_i,z) +b\; \]
+    
+\end{soln}
 \item (10 pts) How does that $f$ predict input $\mathbf z$ that is not in the training set?
+\begin{soln}
+    \\Since our predictor takes the form:
+    \[ f(\mathbf z)=\sum_{i=1}^na_iy_i\kappa(\mathbf z_i,z) +b\; \]
+    We need to consider two cases ( when $z = z_i \;\;\exists\: i \in [n]$ and when $z \neq z_i \;\;\forall\: i \in [n]\;\;$)
+    \\If $\mathbf z$ is not in our training set, that means that $z \neq z_i \;\;\forall\: i \in [n]$, i.e. by the definition of our Kernel,
+    \[ f(\mathbf z)=\sum_{i=1}^na_iy_i\kappa(\mathbf z_i,z) +b\; = \sum_{i=1}^na_iy_i(0) +b\]
+    \[ = b\]
+    \\ $\therefore\:,$ we will predict such a test example using the following criteria:
+    \[ \mathrm{sgn}(f(\mathbf z)) = \mathrm{sgn}(b)\]
+\end{soln}
 \end{enumerate}
 
 Comment: One useful property of kernel functions is that the input space $Z$ does not need to be a vector space; in
@@ -234,9 +251,9 @@ Suppose we wish to construct a directed graphical model for 3 features $X$, $Y$,
         \[  + \frac{10}{100}\:log(\cfrac{\frac{10}{100}}{\frac{50}{100}\frac{50}{100}}) + \frac{40}{100}\:log(\cfrac{\frac{40}{100}}{\frac{50}{100}\frac{50}{100}})\]
         \[  = \frac{80}{100}\:log(\cfrac{\frac{40}{100}}{\frac{50}{100}\frac{50}{100}}) + \frac{20}{100}\:log(\cfrac{\frac{10}{100}}{\frac{50}{100}\frac{50}{100}})\]
         \[  = \cfrac{1}{5} (4log(\cfrac{\frac{40}{100}}{\frac{50}{100}\frac{50}{100}}) + log(\cfrac{\frac{10}{100}}{\frac{50}{100}\frac{50}{100}})) \]
-        \[  = \cfrac{1}{5} (0.81648 - 0.39794) \]
-        \[  = \cfrac{0.41854}{5} \]
-        \[  = 0.08371\]
+        \[  = \cfrac{1}{5} (4\times0.6781 - 1.322) = \cfrac{1}{5} (2.7124 - 1.322)\]
+        \[  = \cfrac{1.3904}{5} \]
+        \[  = 0.27808\]
     \end{soln}
 	\item Compute the mutual information $I(X, Z)$ based on the frequencies observed in the data. (5 pts)
 	\begin{soln}
@@ -247,8 +264,8 @@ Suppose we wish to construct a directed graphical model for 3 features $X$, $Y$,
         \[  = \frac{33}{100}\:log(\cfrac{\frac{33}{100}}{\frac{50}{100}\frac{45}{100}}) + \frac{17}{100}\:log(\cfrac{\frac{17}{100}}{\frac{50}{100}\frac{55}{100}})\]
         \[  + \frac{12}{100}\:log(\cfrac{\frac{12}{100}}{\frac{50}{100}\frac{45}{100}}) + \frac{38}{100}\:log(\cfrac{\frac{38}{100}}{\frac{50}{100}\frac{55}{100}})\]
         \[  = 0.33log(\cfrac{22}{15}) + 0.17log(\cfrac{34}{55}) + 0.12log(\cfrac{8}{15}) + 0.38log(\cfrac{76}{55}) \]
-        \[  = 0.05489 - 0.03551 - 0.03276 + 0.05337\]
-        \[  = 0.03999 \]
+        \[  = 0.182325 - 0.117963 - 0.108828 + 0.177308\]
+        \[  = 0.132842 \]
     \end{soln}
 	\item Compute the mutual information $I(Z, Y)$ based on the frequencies observed in the data. (5 pts)
 	\begin{soln}
@@ -259,8 +276,8 @@ Suppose we wish to construct a directed graphical model for 3 features $X$, $Y$,
         \[  = \frac{40}{100}\:log(\cfrac{\frac{40}{100}}{\frac{45}{100}\frac{50}{100}}) + \frac{5}{100}\:log(\cfrac{\frac{5}{100}}{\frac{45}{100}\frac{50}{100}})\]
         \[  + \frac{10}{100}\:log(\cfrac{\frac{10}{100}}{\frac{55}{100}\frac{50}{100}}) + \frac{45}{100}\:log(\cfrac{\frac{45}{100}}{\frac{55}{100}\frac{50}{100}})\]
         \[  = 0.4log(\cfrac{16}{9}) + 0.05log(\cfrac{2}{9}) + 0.1log(\cfrac{4}{11}) + 0.45log(\cfrac{18}{11}) \]
-        \[  = 0.09995 - 0.03266 - 0.04393 +  0.09625\]
-        \[  = 0.11960 \]
+        \[  = 0.332 - 0.1085 - 0.14594 +  0.319725\]
+        \[  = 0.397285 \]
     \end{soln}
 	\item Which undirected edges will be selected by the Chow-Liu algorithm as the maximum spanning tree? (5 pts)
 	\begin{soln}
