--- a/q3.ipynb
+++ b/q3.ipynb
@@ -128,17 +128,32 @@
     "        return self.layers(x)\n",
     "\n",
     "class KernelSVM(torch.nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(KernelSVM, self).__init__()\n",
-    "        self.layers = torch.nn.Sequential(\n",
-    "            torch.nn.Linear(4, 1, bias=True),\n",
-    "            torch.nn.Sigmoid()\n",
-    "        )\n",
-    "        self.layers[0].state_dict()['weight'].zero_()\n",
-    "        return\n",
+    "    def __init__(self, train_data_x, kernel='rbf', sigma=1.0):\n",
+    "        super().__init__()\n",
+    "        self._train_data_x = train_data_x\n",
+    "        \n",
+    "        if kernel == 'linear':\n",
+    "            self._kernel_func = self.linear\n",
+    "        elif kernel == 'rbf':\n",
+    "            self._kernel = self.rbf\n",
+    "            self._num_c = x.size(0)\n",
+    "            self._gamma = torch.nn.Parameter(torch.FloatTensor([sigma]))\n",
+    "        else:\n",
+    "            assert False\n",
+    "            \n",
+    "        self._w = torch.nn.Linear(in_features=self._num_c, out_features=1)\n",
+    "\n",
+    "    def rbf(self, x, sigma=1):\n",
+    "        x_pairwise_dist = torch.sum(torch.square(x), dim = -1)\n",
+    "        return torch.exp(-0.5/(sigma*sigma) * (x_pairwise_dist[:, None] + x_pairwise_dist[None, :] - 2 * torch.dot(x, x.T)))\n",
+    "\n",
+    "    def linear(x):\n",
+    "        return x\n",
+    "\n",
     "    def forward(self, x):\n",
-    "        x = x.view(-1, 4)\n",
-    "        return self.layers(x)\n",
+    "        y = self._kernel(x)\n",
+    "        y = self._w(y)\n",
+    "        return y\n",
     "\n",
     "def run_knn(k, X_train, Y_train, X_test):\n",
     "    distances = -2*(X_test@X_train.T) + \\\n",
@@ -1762,6 +1777,13 @@
     "validation_loader = torch.utils.data.DataLoader(validation_set, shuffle=True, batch_size=250)\n",
     "test_set = Dataset(test_data, test_labels)\n",
     "test_loader = torch.utils.data.DataLoader(test_set, shuffle=True, batch_size=250)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q 3.3.1"
    ]
   },
   {
